<resources>
    <string name="app_name">[EN]Locale Helper Example</string>
    <string name="main_activity_title">[EN] This title is in English</string>
    <string name="main_activity_desc">This is the description text in English.</string>
    <string name="main_activity_about">This is about text in English.</string>
    <string name="main_activity_to_system_button">System</string>
    <string name="main_activity_to_tr_button">Turkish</string>
    <string name="main_activity_to_en_button">English</string>
    <string name="main_activity_toolbar_title">Title in English</string>
    <string name="second_activity_title">[EN] Second activity in English</string>
    <string name="second_activity_desc">Second description text is in English.</string>
    <string name="main_activity_to_cn_button">Chinese</string>
    <string name="main_activity_to_cs_button">Czech</string>
    <string name="main_second_activity">Second page ></string>
    <string name="back_button"><![CDATA[< Go back]]></string>
    <string name="main_activity_to_ur_button">Urdu</string>
    <string name="dark" translatable="false">Dark</string>
    <string name="light" translatable="false">Light</string>
</resources>
