<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
            android:id="@+id/toSystemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/main_activity_to_system_button"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/toTRButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:layout_weight="1"
            android:text="@string/main_activity_to_tr_button"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/toENButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:layout_weight="1"
            android:text="@string/main_activity_to_en_button"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/toCNButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:layout_weight="1"
            android:text="@string/main_activity_to_cn_button"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/toURButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:layout_weight="1"
            android:text="@string/main_activity_to_ur_button"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/toCSButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text="@string/main_activity_to_cs_button"/>
</LinearLayout>
